--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "config": "3.3.1",
     "create-react-app": "^5.0.0",
-    "express": "^4.17.2"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^6.1.7"
   },
   "scripts": {
     "start": " nodemon --watch backend --exec node --experimental-modules backend/server.js"
